sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:14: error: not found: value -
      case(getNombreValeurs()-3,true) => echange(i,i)
                             ^AlgGnomeSort:14: error: not found: value getNombreValeurs
      case(getNombreValeurs()-3,true) => echange(i,i)
           ^AlgGnomeSort:15: error: not found: value -
      case(getNombreValeurs()-3,false) => echange(i,i+1);
                             ^AlgGnomeSort:15: error: not found: value getNombreValeurs
      case(getNombreValeurs()-3,false) => echange(i,i+1);
           ^