sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  var i = 0
  
  while (i <= getNombreValeurs()-3) {
    
    (i,plusPetit(i+1,i+2)) match {      
      
      case (0,true) => i=i+1
      case (0,false) => echange(i+1,i+2); i=i+1;
      case (_,true) => i=i+1;
      case (_,false) => echange(i+1,i+2); i=i-1;
      case(getNombreValeurs()-3,true) => echange(i,i)
      case(getNombreValeurs()-3,false) => echange(i,i+1);

		}

  }
  
}